--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,14 @@ top: 1059px;
 border-radius: 50%;
 }
 
+.testimony-bg{
+  position: absolute;
+width: 1120px;
+height: 394.07px;
+left: 112px;
+top: 2234px;
+}
+
 .button-format {
 height: 58px;
 width: 166px;
@@ -289,4 +297,133 @@ padding: 40px 0px 30px 50px;
   box-sizing: border-box;
   border-radius: 4px;
   padding: 30px 0px 0px 30px;
+}
+
+.box7{
+  position: absolute;
+width: 800px;
+height: 459.92px;
+left: 272px;
+top: 2343.08px;
+
+background: #FFFFFF;
+border: 1px solid #DADADA;
+box-sizing: border-box;
+border-radius: 4px;
+}
+
+
+
+.collapsible {
+  background-color: transparent;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  text-align: right;
+  outline: none;
+  font-size: 30px;
+}
+
+
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px;
+  letter-spacing: -0.33000001311302185px;
+  text-align: justify;
+  text-justify: inter-word;
+
+}
+
+/* Dropdown Button */
+.dropbtn {
+  height: 58px;
+width: 235px;
+left: 0px;
+top: 0px;
+border-radius: 29px;
+background-color: white ;
+border-radius: 29px;
+border: none;
+color: #685DC5;
+
+font-family: Apercu Pro;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height, or 133% */
+
+text-align: left;
+padding-left: 20px;
+letter-spacing: -0.18px;
+cursor: pointer;
+transition: all 0.2s ease 0s;
+justify-content: space-between;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 235px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+border-radius: 2%;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a{
+  color: #535353;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: rgb(240, 240, 240);}
+
+
+
+.fa-minus-circle{
+  color: #685DC5
+}
+.active, .fa-minus-circle:hover{
+  color: #c7c6cf
+}
+
+.fa-plus-circle{
+  color: white;
+  text-shadow:-1px -1px 0 #c7c6cf, 1px -1px 0 #c7c6cf, -1px 1px 0 #c7c6cf, 1px 1px 0 #c7c6cf;
+}
+
+.active, .fa-plus-circle:hover{
+  color: #c7c6cf
+}
+
+.faq{
+  margin: 30px;
+padding-top: 30px;
+  align-content: center;
+  align-items: center;
+  border-top-width: thin;
+  border-top-color: #c7c6cf
 }
