--- a/src/App.css
+++ b/src/App.css
@@ -1,429 +1,440 @@
 @import url(//db.onlinewebfonts.com/c/74c3c29282b604a9eed88ac6ede61463?family=Apercu+Pro);
-@font-face {font-family: "Apercu Pro"; src: url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.eot"); src: url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.woff") format("woff"), url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.svg#Apercu Pro") format("svg"); }
+@font-face {
+	font-family: "Apercu Pro";
+	src: url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.eot");
+	src: url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.eot?#iefix")
+			format("embedded-opentype"),
+		url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.woff2")
+			format("woff2"),
+		url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.woff")
+			format("woff"),
+		url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.ttf")
+			format("truetype"),
+		url("//db.onlinewebfonts.com/t/74c3c29282b604a9eed88ac6ede61463.svg#Apercu Pro")
+			format("svg");
+}
 
 .App {
-  text-align: center;
-  font-family: Apercu Pro;
-  color: #535353;
+	text-align: center;
+	font-family: Apercu Pro;
+	color: #535353;
 }
 .font {
-  font-family: Apercu Pro;
-  color: #535353;
+	font-family: Apercu Pro;
+	color: #535353;
 }
 
-.navbar-brand{
-  color: white !important;
-  font-size: 18px
+.navbar-brand {
+	color: white !important;
+	font-size: 18px;
 }
 .harbor-space {
-left: 5%;
-right: 5%;
-top: 18.91%;
-bottom: 23.27%;
-height: 26px;
-margin-right: 10px;
-margin-left: 5%;
+	left: 5%;
+	right: 5%;
+	top: 18.91%;
+	bottom: 23.27%;
+	height: 26px;
+	margin-right: 10px;
+	margin-left: 5%;
 }
 
-.bg{
-  font-family: Apercu Pro;
-  background-color: #685DC5 ;
-  display: flex;
-  color:  white;
-  padding: 20px;
-  height: 110px;
+.bg {
+	font-family: Apercu Pro;
+	background-color: #685dc5;
+	display: flex;
+	color: white;
+	padding: 20px;
+	height: 110px;
 }
 
-.apply-button{
-  position:absolute;
-  top: 35px;
-  left: 80%;
-  min-height: 140px;
-  min-width: 140px;
-  border-radius: 50%;
-  font-weight: 600;
-  font-size: 20px !important;
-  letter-spacing: -0.28px;
-  color: white;
-  background-color: #4fa16c;
-  border: none;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 15px;
-  padding: 10px;
-  text-transform: none !important;
-        transition: all 0.2s ease 0s;
+.apply-button {
+	position: absolute;
+	top: 35px;
+	left: 80%;
+	min-height: 140px;
+	min-width: 140px;
+	border-radius: 50%;
+	font-weight: 600;
+	font-size: 20px !important;
+	letter-spacing: -0.28px;
+	color: white;
+	background-color: #4fa16c;
+	border: none;
+	cursor: pointer;
+	text-decoration: none;
+	font-size: 15px;
+	padding: 10px;
+	text-transform: none !important;
+	transition: all 0.2s ease 0s;
 }
 
 .apply-button:hover {
-  transform: scale(1.1);
-  text-transform: none !important;
+	transform: scale(1.1);
+	text-transform: none !important;
 }
 
-.apply-format{
-  margin: 0;
+.apply-format {
+	margin: 0;
 }
 
 .title-font {
-font-family: Apercu Pro;
-font-style: normal;
-font-weight: 500;
-font-size: 48px;
-line-height: 56px;
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 48px;
+	line-height: 56px;
 
-letter-spacing: -0.6px;
+	letter-spacing: -0.6px;
 
-color: #685DC5;
+	color: #685dc5;
 }
 
+.subtitle {
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 16px;
+	line-height: 24px;
+	margin: 0;
+	letter-spacing: -0.16px;
 
-
-.subtitle{
-  font-family: Apercu Pro;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 24px;
-margin: 0;
-  letter-spacing: -0.16px;
-
-  color: #685DC5;
+	color: #685dc5;
 }
-.bold-text{
-  position: absolute;
-height: 64px;
-left: 13.96%;
-right: 55.49%;
-top: 405px;
+.bold-text {
+	position: absolute;
+	height: 64px;
+	left: 13.96%;
+	right: 55.49%;
+	top: 405px;
 
-font-family: Apercu Pro;
-font-style: normal;
-font-weight: 500;
-font-size: 22px;
-line-height: 32px;
-/* or 145% */
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 22px;
+	line-height: 32px;
+	/* or 145% */
 
-letter-spacing: -0.33px;
+	letter-spacing: -0.33px;
 
-color: #535353;
+	color: #535353;
 }
 
-.normal-text{
-  font-family: Apercu Pro;
-  font-style: normal;
-  font-weight: 300;
-  font-size: 22px;
-  line-height: 32px;
-  /* or 145% */
-  text-align: justify;
-  text-justify: inter-word;
+.normal-text {
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 22px;
+	line-height: 32px;
+	/* or 145% */
+	text-align: justify;
+	text-justify: inter-word;
 
-  letter-spacing: -0.33px;
+	letter-spacing: -0.33px;
 
-  color: #535353;
+	color: #535353;
 }
 
-.design-logo{
-position: absolute;
-height: 206px;
-left: 34.2%;
-right: 51.5%;
-top: 162.98px;
+.design-logo {
+	position: absolute;
+	height: 206px;
+	left: 34.2%;
+	right: 51.5%;
+	top: 162.98px;
 }
 
-.zeptolab-logo{
-position: absolute;
-height: 80px;
-left: 55.56%;
-right: 38.89%;
-top: 261px;
+.zeptolab-logo {
+	position: absolute;
+	height: 80px;
+	left: 55.56%;
+	right: 38.89%;
+	top: 261px;
 }
 
 .quad {
-  position: absolute;
-width: 560px;
-height: 257px;
-left: 60.56%;
-top: 613px;
-
+	position: absolute;
+	width: 560px;
+	height: 257px;
+	left: 60.56%;
+	top: 613px;
 }
 
 .student-bg {
-  position: absolute;
-  width: 438px;
-  height: 438px;
-  left: 203px;
-  top: 1030px;
-  }
-
-.student-img {
-  position: absolute;
-width: 380px;
-height: 380px;
-left: 231px;
-top: 1059px;
-border-radius: 50%;
+	position: absolute;
+	width: 438px;
+	height: 438px;
+	left: 203px;
+	top: 1030px;
 }
 
-.testimony-bg{
-  position: absolute;
-width: 1120px;
-height: 394.07px;
-left: 112px;
-top: 2234px;
+.student-img {
+	position: absolute;
+	width: 380px;
+	height: 380px;
+	left: 231px;
+	top: 1059px;
+	border-radius: 50%;
+}
+
+.testimony-bg {
+	position: absolute;
+	width: 1120px;
+	height: 394.07px;
+	left: 112px;
+	top: 2234px;
 }
 
 .button-format {
-height: 58px;
-width: 166px;
-left: 0px;
-top: 0px;
-border-radius: 29px;
-background-color: #685DC5 ;
-border-radius: 29px;
-border: none;
-color: white;
+	height: 58px;
+	width: 166px;
+	left: 0px;
+	top: 0px;
+	border-radius: 29px;
+	background-color: #685dc5;
+	border-radius: 29px;
+	border: none;
+	color: white;
 
-font-family: Apercu Pro;
-font-style: normal;
-font-weight: 500;
-font-size: 18px;
-line-height: 24px;
-/* identical to box height, or 133% */
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 18px;
+	line-height: 24px;
+	/* identical to box height, or 133% */
 
-text-align: center;
-letter-spacing: -0.18px;
-cursor: pointer;
-transition: all 0.2s ease 0s;
+	text-align: center;
+	letter-spacing: -0.18px;
+	cursor: pointer;
+	transition: all 0.2s ease 0s;
 }
 
 .button-format:hover {
-  background-color: #534fb8;
+	background-color: #534fb8;
 }
 
-.tuition{
-  margin-top: 30px;
-  font-family: Apercu Pro;
-font-style: normal;
-font-weight: 300;
-font-size: 48px;
-line-height: 24px;
-/* or 50% */
+.tuition {
+	margin-top: 30px;
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 300;
+	font-size: 48px;
+	line-height: 24px;
+	/* or 50% */
 
-display: flex;
-align-items: center;
-letter-spacing: -0.436364px;
+	display: flex;
+	align-items: center;
+	letter-spacing: -0.436364px;
 }
-
 
 /* boxes */
 .box1 {
-  position: absolute;
-width: 480px;
-height: 116px;
-left: 55.56%;
-top: 368px;
+	position: absolute;
+	width: 480px;
+	height: 116px;
+	left: 55.56%;
+	top: 368px;
 
-background: #FFFFFF;
-border: 1px solid #DADADA;
-box-sizing: border-box;
-border-radius: 4px;
-padding: 20px 0px 0px 50px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 20px 0px 0px 50px;
 }
 
 .box2 {
-  position: absolute;
-width: 480px;
-height: 200px;
-left: 55.56%;
-top: 514px;
+	position: absolute;
+	width: 480px;
+	height: 200px;
+	left: 55.56%;
+	top: 514px;
 
-background: #FFFFFF;
-border: 1px solid #DADADA;
-box-sizing: border-box;
-border-radius: 4px;
-padding: 40px 0px 30px 50px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 40px 0px 30px 50px;
 }
 
-.box3{
-  position: absolute;
-  width: 320px;
-  height: 524px;
-  left: 201px;
-  top: 1540px;
+.box3 {
+	width: 320px;
+	height: 524px;
+	left: 201px;
+	top: 1540px;
 
-  background: #FFFFFF;
-  border: 1px solid #DADADA;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 30px 0px 0px 50px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 30px 0px 0px 50px;
 }
-.box4{
-  position: absolute;
-  width: 320px;
-  height: 274px;
-  left: 561px;
-  top: 1540px;
+.box4 {
+	position: absolute;
+	width: 320px;
+	height: 274px;
+	left: 561px;
+	top: 1540px;
 
-  background: #FFFFFF;
-  border: 1px solid #DADADA;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 30px 25px 0px 30px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 30px 25px 0px 30px;
 }
-.box5{
-  text-align: justify;
-  text-justify: inter-word;
-  position: absolute;
-  width: 320px;
-  height: 274px;
-  left: 360px;
-  top: 0px;
+.box5 {
+	text-align: justify;
+	text-justify: inter-word;
+	position: absolute;
+	width: 320px;
+	height: 274px;
+	left: 360px;
+	top: 0px;
 
-  background: #FFFFFF;
-  border: 1px solid #DADADA;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 30px 25px 0px 30px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 30px 25px 0px 30px;
 }
-.box6{
-  position: absolute;
-  width: 680px;
-  height: 178px;
-  top: 346px;
+.box6 {
+	position: absolute;
+	width: 680px;
+	height: 178px;
+	top: 346px;
 
-  background: #FFFFFF;
-  border: 1px solid #DADADA;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 30px 0px 0px 30px;
-}
-
-.box7{
-  position: absolute;
-width: 800px;
-height: 459.92px;
-left: 272px;
-top: 2343.08px;
-
-background: #FFFFFF;
-border: 1px solid #DADADA;
-box-sizing: border-box;
-border-radius: 4px;
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+	padding: 30px 0px 0px 30px;
 }
 
+.box7 {
+	position: absolute;
+	width: 800px;
+	height: 459.92px;
+	left: 272px;
+	top: 2343.08px;
 
+	background: #ffffff;
+	border: 1px solid #dadada;
+	box-sizing: border-box;
+	border-radius: 4px;
+}
 
 .collapsible {
-  background-color: transparent;
-  cursor: pointer;
-  width: 100%;
-  border: none;
-  text-align: right;
-  outline: none;
-  font-size: 30px;
+	background-color: transparent;
+	cursor: pointer;
+	width: 100%;
+	border: none;
+	text-align: right;
+	outline: none;
+	font-size: 30px;
 }
 
-
 .content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: 32px;
-  letter-spacing: -0.33000001311302185px;
-  text-align: justify;
-  text-justify: inter-word;
-
+	padding: 0 18px;
+	display: none;
+	overflow: hidden;
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 300;
+	line-height: 32px;
+	letter-spacing: -0.33000001311302185px;
+	text-align: justify;
+	text-justify: inter-word;
 }
 
 /* Dropdown Button */
 .dropbtn {
-  height: 58px;
-width: 235px;
-left: 0px;
-top: 0px;
-border-radius: 29px;
-background-color: white ;
-border-radius: 29px;
-border: none;
-color: #685DC5;
+	height: 58px;
+	width: 235px;
+	left: 0px;
+	top: 0px;
+	border-radius: 29px;
+	background-color: white;
+	border-radius: 29px;
+	border: none;
+	color: #685dc5;
 
-font-family: Apercu Pro;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-/* identical to box height, or 133% */
+	font-family: Apercu Pro;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 24px;
+	/* identical to box height, or 133% */
 
-text-align: left;
-padding-left: 20px;
-letter-spacing: -0.18px;
-cursor: pointer;
-transition: all 0.2s ease 0s;
-justify-content: space-between;
+	text-align: left;
+	padding-left: 20px;
+	letter-spacing: -0.18px;
+	cursor: pointer;
+	transition: all 0.2s ease 0s;
+	justify-content: space-between;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 235px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-border-radius: 2%;
+	display: none;
+	position: absolute;
+	background-color: #f1f1f1;
+	min-width: 235px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+	border-radius: 2%;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a{
-  color: #535353;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  cursor: pointer;
+.dropdown-content a {
+	color: #535353;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	cursor: pointer;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+	background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+	display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: rgb(240, 240, 240);}
-
-
-
-.fa-minus-circle{
-  color: #685DC5
-}
-.active, .fa-minus-circle:hover{
-  color: #c7c6cf
+.dropdown:hover .dropbtn {
+	background-color: rgb(240, 240, 240);
 }
 
-.fa-plus-circle{
-  color: white;
-  text-shadow:-1px -1px 0 #c7c6cf, 1px -1px 0 #c7c6cf, -1px 1px 0 #c7c6cf, 1px 1px 0 #c7c6cf;
+.fa-minus-circle {
+	color: #685dc5;
+}
+.active,
+.fa-minus-circle:hover {
+	color: #c7c6cf;
 }
 
-.active, .fa-plus-circle:hover{
-  color: #c7c6cf
+.fa-plus-circle {
+	color: white;
+	text-shadow: -1px -1px 0 #c7c6cf, 1px -1px 0 #c7c6cf, -1px 1px 0 #c7c6cf,
+		1px 1px 0 #c7c6cf;
 }
 
-.faq{
-  margin: 30px;
-padding-top: 30px;
-  align-content: center;
-  align-items: center;
-  border-top-width: thin;
-  border-top-color: #c7c6cf
+.active,
+.fa-plus-circle:hover {
+	color: #c7c6cf;
+}
+
+.faq {
+	margin: 30px;
+	padding-top: 30px;
+	align-content: center;
+	align-items: center;
+	border-top-width: thin;
+	border-top-color: #c7c6cf;
 }
