fixed typos and CSS positions

--- a/src/App.css
+++ b/src/App.css
@@ -319,7 +319,8 @@
 	width: 320px;
 	height: 274px;
 	top: 1540px;
-	left: 60%;
+	left: 35%;
+	margin-left: 350px;
 
 	background: #ffffff;
 	border: 1px solid #dadada;
@@ -370,7 +371,7 @@
 	padding: 0 18px;
 	display: none;
 	overflow: hidden;
-	font-size: 18px;
+	font-size: 20px;
 	font-style: normal;
 	font-weight: 300;
 	line-height: 32px;
